--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Lab8P2_PamelaRamirez_12141141
-main.class=lab8p2_pamelaramirez_12141141.Lab8P2_PamelaRamirez_12141141
+main.class=lab8p2_pamelaramirez_12141141.VentanaPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
